--- a/public/index.html
+++ b/public/index.html
@@ -15,23 +15,34 @@
 	.cell-controls {
 		position: absolute;
 		top: 200;
-		border: 1px solid #222222;
-		padding: 10px;
+		padding: 0px;
+		//width: 120px;
+		//height: 360px;
 	}
 	.cell-controls > label {
+		width: 100%;
+		height: 25%;
 		display: block;
-		margin: 20px;
+		margin: 10px;
 	}
 	.cell-controls > label > input {
-		width: 30px;
-		height: 30px;
+		width: 100%;
+		height: 100%;
+		visibility: hidden; /* Makes input not-clickable */
+  		position: absolute; /* Remove input from document flow */
 	}
-	#p1-controls {
-		left:50;
+	.cell-controls > label > input + img {
+  		cursor:pointer;
+		width: 100%;
+		height: 100%;
+  		border:2px solid transparent;
+		image-rendering: pixelated;
 	}
-	#p2-controls {
-		left: 1300;
+	.cell-controls > label > input:checked + img {
+  		//border:2px solid #f00;
+		background: #AAAAAA;
 	}
+
 </style>
 <head>
 	<title>Pathogen</title>
@@ -40,17 +51,23 @@
 <body>
 	<canvas id="game-canvas" class="pathogen-window"></canvas>
 
-	<div id="p1-controls" class="cell-controls">
-		<label><input type="radio">A</label>
-		<label><input type="radio">B</label>
-		<label><input type="radio">C</label>
+	<div id="p1-controls" class="cell-controls" style="width:120px; height:480px;">
+		<label> <input type="radio" name="p1-radio" value=1 checked="checked"> <img id="cell_0A" src="/img/cell_0A.png"> </label>
+		<label> <input type="radio" name="p1-radio" value=2> <img id="cell_0B" src="/img/cell_0B.png"> </label>
+		<label> <input type="radio" name="p1-radio" value=3> <img id="cell_0C" src="/img/cell_0C.png"> </label>
+		<label> <input type="radio" name="p1-radio" value=4> <img id="cell_0V" src="/img/cell_0V.png"> </label>
 	</div>
 
-	<div id="p2-controls" class="cell-controls">
-		<label><input type="radio">A</label>
-		<label><input type="radio">B</label>
-		<label><input type="radio">C</label>
+	<div id="p2-controls" class="cell-controls" style="width:120px; height:480px; left:55">
+		<label> <input type="radio" name="p2-radio" value=1 checked="checked"> <img id="cell_1A" src="/img/cell_1A.png"> </label>
+		<label> <input type="radio" name="p2-radio" value=2> <img id="cell_1B" src="/img/cell_1B.png"> </label>
+		<label> <input type="radio" name="p2-radio" value=3> <img id="cell_1C" src="/img/cell_1C.png"> </label>
+		<label> <input type="radio" name="p2-radio" value=4> <img id="cell_1V" src="/img/cell_1V.png"> </label>
 	</div>
+
+	<!-- So the cell_0W.png and cell_1W.png files can be accessed by javascript !-->
+	<img id="cell_0W" src="/img/cell_0W.png" style="display:none;">
+	<img id="cell_1W" src="/img/cell_1W.png" style="display:none;">
 
 
 
@@ -131,13 +148,19 @@
 		mx = Math.floor(mx/game.board.unit);
 		my = Math.floor(my/game.board.unit);
 
-		//let level = parseInt(level_input.value);
-		let level = 1;
+
+		let control_box = "p1-radio";
+		if (player.id == 1)
+			control_box = "p2-radio";
+
+		let level = parseInt(document.querySelector('input[name='+control_box+']:checked').value)
 
 		sendClick(mx, my, level);
 	});
 
 	connect();
+
+	console.log(document.getElementById("p1-controls").style);
 </script>
 
 
