Changed animation delay

--- a/public/README.html
+++ b/public/README.html
@@ -18,6 +18,9 @@
 <h2> Current Bugs </h2>
 <ul>
 	<li>No cell-use counters</li>
+	<li>Virus overflows border</li>
+	<li>Virus (at least) causes severe lag</li>
+	<li>Client sync error; the current player lags behind</li>
 </ul>
 
 </body>
