Changes to README

--- a/public/README.html
+++ b/public/README.html
@@ -11,15 +11,25 @@
 
 <h2> Future Features </h2>
 <ul>
-	<li>Multiplayer</li>
-	<li>Virus</li>
+	<li>Cookies for re-connection</li>
+	<li>Multiplayer
+		<ul>
+		<li>Tournmanent?</li>
+		<li>Lobby</li>
+		</ul>
+	</li>
+	<li>Game invite
+		<ul>
+		<li>Custom Game Board</li>
+		<li>Private Game with join code</li>
+		</ul>
+	</li>
+	<li>3-4 Players</li>
+
 </ul>
 
 <h2> Current Bugs </h2>
 <ul>
-	<li>No cell-use counters</li>
-	<li>Virus overflows border</li>
-	<li>Virus (at least) causes severe lag</li>
 	<li>Client sync error; the current player lags behind</li>
 </ul>
 
