Improved Cell Selection grandly

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,8 @@
 		image-rendering: pixelated;
 	}
 	.cell-controls > label > input:checked + img {
-		background: #AAAAAA;
+		background: #8A2BE288;
+		border-radius: 10px;
 	}
 
 	#lobby-window {
