Added hopes and dreams

--- a/public/README.html
+++ b/public/README.html
@@ -16,6 +16,7 @@
 		<ul>
 		<li>Tournmanent?</li>
 		<li>Lobby</li>
+		<li>3-4 Players</li>
 		</ul>
 	</li>
 	<li>Game invite
@@ -24,7 +25,14 @@
 		<li>Private Game with join code</li>
 		</ul>
 	</li>
-	<li>3-4 Players</li>
+	<li>Progress bars on cell production</li>
+	<li>Better textures
+		<ul>
+		<li>From texture map</li>
+		<li>Maybe general texture-map loading</li>
+		</ul>
+	</li>
+	
 
 </ul>
 
