--- a/public/README.html
+++ b/public/README.html
@@ -25,11 +25,11 @@
 		<li>Private Game with join code</li>
 		</ul>
 	</li>
-	<li>Progress bars on cell production</li>
 	<li>Better textures
 		<ul>
-		<li>From texture map</li>
-		<li>Maybe general texture-map loading</li>
+		<li>For progress bars</li>
+		<li>To show contiguous groups of cells</li>
+		<li>Animations? At least for destruction/upgrade</li>
 		</ul>
 	</li>
 	
