Added cell-tile backgrounds to README

--- a/public/README.html
+++ b/public/README.html
@@ -32,6 +32,7 @@
 		<li>Animations? At least for destruction/upgrade</li>
 		</ul>
 	</li>
+	<li>Better background colors for cell tiles; both red+blue</li>
 	
 
 </ul>
