Fixed border-color sync error

--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
 		if (client.connection == "online")
 			sendClick(mx, my, level);
 		else 
-			success = client.game.click(mx, my, player-1, level);
+			success = client.game.click(mx, my, playerId-1, level);
 
 		if (success) updateProgressBars();
 			
