--- a/public/README.html
+++ b/public/README.html
@@ -17,12 +17,25 @@
 		<li>Tournmanent?</li>
 		<li>Lobby</li>
 		<li>3-4 Players</li>
+		<li>Use webSocket (socket.io) to keep conn. open between server and client
+			<ul>
+			<li>Notify a host that a client connected.</li>
+			<li>Send click updates to clients?</li>
+			<li>Detect a client disconnected (and drop game invites etc.)</li>
+			<li>Notify players that opponent disconnected.</li>
+			</ul>
+		</li>
+		</ul>
+	</li>
+	<li>Design Changes
+		<ul>
+		<li>Title screen</li>
+		<li>Opening Screen: Host/Join/Offline</li>
 		</ul>
 	</li>
 	<li>Game invite
 		<ul>
 		<li>Custom Game Board</li>
-		<li>Private Game with join code</li>
 		</ul>
 	</li>
 	<li>Better textures
@@ -37,9 +50,11 @@
 
 </ul>
 
-<h2> Current Bugs </h2>
+<h2> Current Patches</h2>
 <ul>
 	<li>Client sync error; the current player lags behind</li>
+	<li>Update the render loop so that only the images from the last tick are updated, not just this move</li>
+	<li>Some abstracted animation manager</li>
 </ul>
 
 </body>
